# fastapi_dream_core

./: .gitignore  COMANDS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
fastapi_dream_core/: __init__.py  base_repository.py  base_service.py  constants.py  environments.py  exceptions.py  fast_api_create_app.py  model_mixin.py  pagination.py
fastapi_dream_core/application_dependencies/: application_dependencies_abc.py
fastapi_dream_core/cache_driver/: __init__.py  cache_driver_abc.py  in_memory_driver.py  redis_cache_driver.py
fastapi_dream_core/database/: __init__.py  database_sqlmodel.py
fastapi_dream_core/helpers/: readiness.py
fastapi_dream_core/middleware/: __init__.py  app_middleware.py  develop_middleware.py
fastapi_dream_core/pagination/: __init__.py  pagination.py
fastapi_dream_core/repository/: __init__.py  base_repository.py  base_repository_abc.py
fastapi_dream_core/routes/health/: health_router.py  health_schemas.py
fastapi_dream_core/routes/migrations/: run_migrations_router.py  run_migrations_schemas.py
fastapi_dream_core/utils/: __init__.py  csv_exporter.py  logger.py  singleton_meta.py
next/: model_mixin.py
tests/resources/: user_model.py  user_repository.py
tests/resources/game/: game_model_mixin.py  game_repository.py
tests/resources/user/: user_model.py  user_repository.py
tests/unit/fastapi_dream_core/: test_base_repository.py  test_model_mixin.py
