[tool.poetry]
name = "fastapi_dream_core"
version = "0.1.0"
description = "Reusable core, repositories and utilities for FastAPI"
authors = ["Yuri Hartmann <yurihartmann0607@gmail.com>"]
license = "MIT"
classifiers = [
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.35"
sqlmodel = "^0.0.6"
redis = "^4.2.2"
boto3 = "^1.21.45"
localstack-client = "^1.35"
dependency-injector = "^4.39.1"
mysqlclient = "^2.1.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
faker = "^13.3.4"
fakeredis = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
